--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Engjell' Website
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Hi im Engjell Berisha</h1>
+	<p>Hello my name is Engjell Berisha and this is my first website <em></em> ;) <a href="/about"></a></p>
 </div><!-- /.blurb -->
